--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,7 @@ body {
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 0;
 }
 
 @media screen and (min-width: 480px) {
@@ -35,17 +34,23 @@ body {
 }
 .banner {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-repeat: no-repeat;
+  align-items: flex-end;
   background-position: center;
-  background-image: url(../images/Mobile.jpg);
-  max-width: 480px;
-  max-height: 400px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-left: 24px;
+  padding-bottom: 37px;
   background-color: #E5E5E5;
+}
+@media screen and (max-width: 767px) and (min-width: 1279px) {
+  .banner {
+    padding-left: 41px;
+    padding-bottom: 14px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner {
+    padding-left: 345px;
+    padding-bottom: 49px;
+  }
 }
 .banner__title {
   font-family: Roboto;
@@ -58,7 +63,7 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 480px) {
   .banner__title {
     width: 257px;
     height: 56px;
@@ -68,45 +73,56 @@ body {
     letter-spacing: 0.06em;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .banner__title {
-    width: 696px;
-    height: 120px;
+    width: 768px;
+    height: 498px;
+    font-weight: 600;
+    font-size: 54px;
+    line-height: 1.17;
+    letter-spacing: 0.06em;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .banner__title {
+    width: 596px;
+    height: 132px;
     font-weight: 900;
-    font-size: 44px;
+    font-size: 56px;
     line-height: 1.36;
     letter-spacing: 0.06em;
   }
 }
 
 .overlay {
-  background-image: url(../images/Mobile@2x.jpg) "";
   margin-left: auto;
   margin-right: auto;
   max-width: 480px;
-  height: 400px;
+  height: 770px;
   background-color: #C4C4C4;
   background-repeat: no-repeat;
   background-size: cover;
+  background-image: url(../images/Mobile.jpg);
+  background-image: url(../images/Mobile2x.jpg);
 }
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .overlay {
-    background-image: url(../images/Mobile@2x.jpg);
+    background-image: url(../images/Mobile2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/hero/hero-768.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/hero/hero-768@2x.jpg);
+    background-image: url(../images/Tablet.jpg);
+    background-image: url(../images/Tablet2x.jpg);
     max-width: 768px;
-    height: 400px;
+    height: 498px;
   }
 }
 @media screen and (min-width: 1200px) {
   .overlay {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/hero/hero-1600.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/hero/hero-1600@2x.jpg);
+    background-image: url(../images/Desktop.jpg);
+    background-image: url(../images/Desktop2x.jpg);
     max-width: 1600px;
-    height: 600px;
+    height: 506px;
   }
 }/*# sourceMappingURL=main.css.map */
