--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,6 @@
 
 .container{
-        padding-right: 15px;
-        padding-left: 15px;
+       padding: 0;
 }
 
 @media screen and (min-width: 480px){
