--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -1,18 +1,24 @@
    
    .banner {
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-repeat: no-repeat;
+            align-items: flex-end;
             background-position: center;
-            background-image: url(../images/Mobile.jpg);
-            max-width: 480px;
-            max-height: 400px;
-            margin-left: auto;
-            margin-right: auto;
-          
+            padding-left: 24px;
+            padding-bottom: 37px;
             background-color: #E5E5E5;
+
+        @media screen and (max-width:767px) and (min-width:1279px) {
+                padding-left: 41px;
+                padding-bottom: 14px;
+                }
+
+
+        @media screen and (min-width:1280px) {
+                padding-left: 345px;
+                padding-bottom: 49px;
+                }
+                                
+
 
         &__title {
                 font-family: Roboto;
@@ -25,70 +31,67 @@
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
-                ////text-fill-color: transparent;
+            
 
 
 
-                @media screen and (min-width:320px) {
+                @media screen and (min-width:480px) {
                 width: 257px;
                 height: 56px;
                 @include font(600, 24px, 1.17, 0.06em)
                         
                 }
+                
+                @media screen and (min-width:768px) {
+                        
+                width: 768px;
+                height: 498px;
+                @include font(600, 54px, 1.17, 0.06em)
+                }
 
-                @media screen and (min-width: 1200px) {
-                        width: 696px;
-                        height: 120px;
-                        @include font(900, 44px, 1.36, 0.06em)
+                @media screen and (min-width: 1280px) {
+                        width: 596px;
+                        height: 132px;
+                        @include font(900, 56px, 1.36, 0.06em)
                         
                 }
-            }
+            
    
         }
-
+   }
 .overlay {
-            background-image: url(../images/Mobile@2x.jpg)'';
+           
             margin-left: auto;
             margin-right: auto;
             max-width: 480px;
-            height: 400px;
+            height: 770px;
             background-color: #C4C4C4;
             background-repeat: no-repeat;
             background-size: cover;
+                background-image: url(../images/Mobile.jpg);
+                background-image: url(../images/Mobile2x.jpg);
 
             @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
                     background-image:
-                            url(../images/Mobile@2x.jpg);
+                            url(../images/Mobile2x.jpg);
             }
 
 
             @media screen and (min-width: 768px) {
-                    background-image: linear-gradient(to right,
-                                    rgba(47, 48, 58, 0.4),
-                                    rgba(47, 48, 58, 0.4)),
-                            url(../images/tablet/hero/hero-768.jpg);
-                    background-image: linear-gradient(to right,
-                                    rgba(47, 48, 58, 0.4),
-                                    rgba(47, 48, 58, 0.4)),
-                            url(../images/tablet/hero/hero-768@2x.jpg);
+                    background-image: url(../images/Tablet.jpg);
+                    background-image: url(../images/Tablet2x.jpg);
                     max-width: 768px;
-                    height: 400px;
+                    height: 498px;
             }
 
             @media screen and (min-width: 1200px) {
-                    background-image: linear-gradient(to right,
-                                    rgba(47, 48, 58, 0.4),
-                                    rgba(47, 48, 58, 0.4)),
-                            url(../images/desktop/hero/hero-1600.jpg);
-                    background-image: linear-gradient(to right,
-                                    rgba(47, 48, 58, 0.4),
-                                    rgba(47, 48, 58, 0.4)),
-                            url(../images/desktop/hero/hero-1600@2x.jpg);
+                    background-image:url(../images/Desktop.jpg);
+                    background-image: url(../images/Desktop2x.jpg);
 
                     max-width: 1600px;
-                    height: 600px;
+                    height: 506px;
             }
 
 
